--- a/styles.css
+++ b/styles.css
@@ -46,11 +46,13 @@ img {
 }
 h2{
     display: inline-block;
-    padding: 10px;
+    padding: 5px;
+    margin: 5px;
+    margin-top: 15px;
     border-radius: 10px;
     background-color: hsl(47, 88%, 63%);
 }
 
-@media screen (min-width) {
+@media screen and (max-width:375px) {
     
 }
