--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,21 @@ body{
 p{
     font-size: 16px;
 }
+.para{
+    font-weight: 800;
+    display: inline-block;
+    padding: 8px;
+    margin: 5px;
+    margin-top: 15px;
+    border-radius: 5px;
+    background-color: hsl(47, 88%, 63%);
+}
 h1{
     font-size: 24px;
+}
+h1:hover{
+    cursor: pointer;
+    color:hsl(47, 88%, 63%);
 }
 img, h3 {
     display: inline-block;
