--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,164 @@
-body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "Figtree", sans-serif;
-    background-color: hsl(47, 88%, 63%);
-    min-height: 100vh;
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
+/* Prevent font size inflation */
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
+/* Remove default margin in favour of better control in authored CSS */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin-block-end: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  line-height: 1.5;
+}
+
+/* Set shorter line heights on headings and interactive elements */
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
+  line-height: 1.1;
+}
+
+/* Balance text wrapping on headings */
+h1,
+h2,
+h3,
+h4 {
+  text-wrap: balance;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+  color: currentColor;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Make sure textareas without a rows attribute are not tiny */
+textarea:not([rows]) {
+  min-height: 10em;
+}
+
+/* Anything that has been anchored to should have extra scroll margin */
+:target {
+  scroll-margin-block: 5ex;
+}
+/* reset above */
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Figtree", sans-serif;
+  background-color: hsl(47, 88%, 63%);
+  min-height: 100vh;
+}
+a {
+  text-decoration: none;
+}
 .attribution {
-    font-size: 11px;
-    text-align: center;
+  font-size: 11px;
+  text-align: center;
 }
 
 .attribution a {
-    color: hsl(228, 45%, 44%);
+  color: hsl(228, 45%, 44%);
 }
 .card {
-    display: flex;
-    min-width: 100px;
-    background-color: white;
-    padding: 10px;
-    border-radius: 10px;
-    padding: 10px;
-    border: solid 2px;
-    box-shadow: 10px 10px 0 -3px black,
-        10px 10px 0 0 black;
+  position: relative;
+  display: flex;
+  min-width: 100px;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  padding: 10px;
+  border: solid 2px;
+  box-shadow: 10px 10px 0 -3px black, 10px 10px 0 0 black;
 }
-.innercard{
-    margin: 10px;
+.innercard {
+  margin: 10px;
 }
-p{
-    font-size: 16px;
+p {
+  font-size: 1rem; 
 }
-.para{
-    font-weight: 800;
-    display: inline-block;
-    padding: 8px;
-    margin: 5px;
-    margin-top: 15px;
-    border-radius: 5px;
-    background-color: hsl(47, 88%, 63%);
+.para {
+  font-weight: 800;
+  display: inline-block;
+  padding: 8px;
+  margin: 5px;
+  margin-top: 15px;
+  border-radius: 5px;
+  background-color: hsl(47, 88%, 63%);
 }
-h1{
-    font-size: 24px;
+h1 {
+  font-size: 24px;
 }
-h1:hover{
-    cursor: pointer;
-    color:hsl(47, 88%, 63%);
+h1:hover {
+  cursor: pointer;
+  color: hsl(47, 88%, 63%);
 }
-img, h3 {
-    display: inline-block;
+img,
+h3 {
+  display: inline-block;
 }
 svg {
-    border-radius: 10px;
+  border-radius: 10px;
 }
 img {
-    height: 40px;
+  height: 40px;
 }
-h2{
-    display: inline-block;
-    padding: 5px;
-    margin: 5px;
-    margin-top: 15px;
-    border-radius: 10px;
-    background-color: hsl(47, 88%, 63%);
+h2 {
+  display: inline-block;
+  padding: 5px;
+  margin: 5px;
+  margin-top: 15px;
+  border-radius: 10px;
+  background-color: hsl(47, 88%, 63%);
 }
 
-@media screen and (max-width:375px) {
-    
+@media screen and (max-width: 375px) {
 }
